issues with the white space

--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ html {
 body {
     display: block;
     margin: 0 auto;
+    overflow-x: hidden;
 }
 
 .skip-links {
